--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -49,12 +49,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestesUnitariosDePosts.cs" />
+    <Compile Include="TestesUnitarosDoPost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lucilvio.Blog.Web\Lucilvio.Blog.Web.csproj">
       <Project>{C4438258-B38E-4F25-8338-64E72453AFCF}</Project>
       <Name>Lucilvio.Blog.Web</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
