--- a/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
+++ b/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
@@ -140,8 +140,10 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
