--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDePosts.cs" />
+    <Compile Include="TestesUnitariosDeComentario.cs" />
     <Compile Include="TestesUnitarosDoPost.cs" />
   </ItemGroup>
   <ItemGroup>
