--- a/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
+++ b/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
@@ -147,6 +147,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Properties\PublishProfiles\lucilvio-blog.pubxml" />
+    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Post\Cadastrar.cshtml" />
@@ -177,6 +178,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\SimpleInjectorInitializer.cs" />
+    <Compile Include="Comentario.cs" />
+    <Compile Include="ConfiguracaoDoComentario.cs" />
     <Compile Include="ConfiguracaoDoPost.cs" />
     <Compile Include="ContextoDoBlog.cs" />
     <Compile Include="Controllers\HomeController.cs" />
