--- a/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
+++ b/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
@@ -153,6 +153,7 @@
     <Content Include="Views\Post\Cadastrar.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Post\Editar.cshtml" />
+    <Content Include="Views\Post\Ver.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
