--- a/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
+++ b/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
@@ -147,6 +147,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="Properties\PublishProfiles\lucilvio-blog.pubxml" />
+    <Content Include="Scripts\blog\geral.js" />
+    <Content Include="Scripts\blog\servicos\servico-de-comentarios.js" />
+    <Content Include="Scripts\blog\ver-post.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -154,6 +157,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Post\Editar.cshtml" />
     <Content Include="Views\Post\Ver.cshtml" />
+    <Content Include="Views\Shared\_ModalLogin.cshtml" />
+    <Content Include="Views\Shared\_Mensagens.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -173,7 +178,9 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
@@ -181,8 +188,11 @@
     <Compile Include="App_Start\SimpleInjectorInitializer.cs" />
     <Compile Include="Comentario.cs" />
     <Compile Include="ConfiguracaoDoComentario.cs" />
+    <Compile Include="ConfiguracaoDoUsuario.cs" />
     <Compile Include="ConfiguracaoDoPost.cs" />
     <Compile Include="ContextoDoBlog.cs" />
+    <Compile Include="IServicoDeAutenticacao.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Global.asax.cs">
@@ -190,10 +200,14 @@
     </Compile>
     <Compile Include="IDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ModeloDeListaDePosts.cs" />
     <Compile Include="ModeloDePost.cs" />
     <Compile Include="Post.cs" />
+    <Compile Include="RepositorioDeUsuarios.cs" />
     <Compile Include="RepositorioDePosts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicoDeAutenticacaoViaFormsAuthentication.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
