--- a/Lucilvio.Blog.Web/Web.config
+++ b/Lucilvio.Blog.Web/Web.config
@@ -11,6 +11,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+  
+    <authentication mode="Forms">
+      <forms loginUrl="/Home/Index" />
+    </authentication>
   </system.web>
   <system.codedom>
     <compilers>
