Implementação da gestão de usuários para autenticação no blog #9

--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -65,7 +65,7 @@
     <Compile Include="TestesUnitariosDoRepositorioDeUsuarios.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDePosts.cs" />
     <Compile Include="TestesUnitariosDeComentario.cs" />
-    <Compile Include="TestesUnitarosDoUsuario.cs" />
+    <Compile Include="TestesUnitariosDoUsuario.cs" />
     <Compile Include="TestesUnitarosDoPost.cs" />
   </ItemGroup>
   <ItemGroup>
