--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -66,7 +66,7 @@
     <Compile Include="TestesUnitariosDoRepositorioDePosts.cs" />
     <Compile Include="TestesUnitariosDeComentario.cs" />
     <Compile Include="TestesUnitariosDoUsuario.cs" />
-    <Compile Include="TestesUnitarosDoPost.cs" />
+    <Compile Include="TestesUnitariosDoPost.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lucilvio.Blog.Web\Lucilvio.Blog.Web.csproj">
