--- a/Lucilvio.Blog.Web/Web.config
+++ b/Lucilvio.Blog.Web/Web.config
@@ -8,13 +8,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <appSettings>
+    <add key="owin:AppStartup" value="Lucilvio.Blog.Web.Startup" />
+  </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  
-    <authentication mode="Forms">
-      <forms loginUrl="/Home/Index" />
-    </authentication>
   </system.web>
   <system.codedom>
     <compilers>
