--- a/Lucilvio.Blog.Web/Web.config
+++ b/Lucilvio.Blog.Web/Web.config
@@ -9,6 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
+  <connectionStrings>
+    <add name="ContextoDoBlog" connectionString="Server=tcp:blog-db.database.windows.net,1433;Initial Catalog=prd;Persist Security Info=False;User ID=lucilvio;Password=H0mEhOM3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
+    <!--<add name="ContextoDoBlog" connectionString="Data Source=.\\home;Initial Catalog=Lucilvio.Blog;Integrated Security=True"/>-->
+  </connectionStrings>
+  
   <appSettings>
     <add key="owin:AppStartup" value="Lucilvio.Blog.Web.Startup" />
   </appSettings>
