--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestesUnitariosDaControllerDeLogin.cs" />
+    <Compile Include="TestesUnitariosDeTag.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDeUsuarios.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDePosts.cs" />
     <Compile Include="TestesUnitariosDeComentario.cs" />
