--- a/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
+++ b/Lucilvio.Blog.Web/Lucilvio.Blog.Web.csproj
@@ -217,6 +217,7 @@
     <Compile Include="ContextoDoBlog.cs" />
     <Compile Include="CapturarErrosAttribute.cs" />
     <Compile Include="ControllerExtensions.cs" />
+    <Compile Include="Controllers\RepositorioDeTags.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="IServicoDeAutenticacao.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -227,11 +228,15 @@
     </Compile>
     <Compile Include="IDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="ModeloDeEdicaoDePost.cs" />
     <Compile Include="ModeloDeListaDePostsParaGestao.cs" />
     <Compile Include="ModeloDeListaDePosts.cs" />
+    <Compile Include="ModeloDeCadastroDePost.cs" />
     <Compile Include="ModeloDePost.cs" />
     <Compile Include="ModeloDePostDaListaDeGestao.cs" />
     <Compile Include="ModeloDePostDaLista.cs" />
+    <Compile Include="ModeloDeListaDeTags.cs" />
+    <Compile Include="ModeloDeTag.cs" />
     <Compile Include="ModeloDeUsuario.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="RepositorioDeUsuarios.cs" />
@@ -239,6 +244,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicoDeAutenticacaoViaCookies.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Tag.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="VariaveisDeAmbiente.cs" />
   </ItemGroup>
