Implementado o filtro de posts por tag

--- a/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
+++ b/Lucilvio.Blog.Testes/Lucilvio.Blog.Testes.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestesUnitariosDaControllerDeLogin.cs" />
     <Compile Include="TestesUnitariosDeTag.cs" />
+    <Compile Include="TestesUnitariosDoRepositorioDeTags.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDeUsuarios.cs" />
     <Compile Include="TestesUnitariosDoRepositorioDePosts.cs" />
     <Compile Include="TestesUnitariosDeComentario.cs" />
